--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'java'
 }
 
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
+
 group 'no.arnemunthekaas'
 version '1.0-SNAPSHOT'
 
@@ -18,9 +21,12 @@ test {
     useJUnitPlatform()
 }
 
-project.ext.lwjglVersion = "3.3.1"
-project.ext.jomlVersion = "1.10.4"
-project.ext.lwjglNatives = "natives-macos-arm64"
+ext {
+    lwjglVersion = "3.3.1"
+    jomlVersion = "1.10.4"
+    lwjglNatives = "natives-windows" // change this to support other operating systems
+    imguiVersion = '1.86.4'
+}
 
 dependencies {
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
@@ -39,5 +45,10 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
-    implementation "org.joml:joml:1.10.4"
+    implementation "org.joml:joml:${jomlVersion}"
+
+    implementation "io.github.spair:imgui-java-app:1.86.4"
+    implementation "io.github.spair:imgui-java-binding:$imguiVersion"
+    implementation "io.github.spair:imgui-java-lwjgl3:$imguiVersion"
+    implementation "io.github.spair:imgui-java-natives-windows-ft:$imguiVersion" // change this to support other operating systems
 }
