--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ ext {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.9.0'
+
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
     implementation "org.lwjgl:lwjgl"
