--- a/imgui.ini
+++ b/imgui.ini
@@ -9,12 +9,17 @@ Size=57,70
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1371,3
-Size=550,680
+Pos=1380,6
+Size=550,677
 Collapsed=0
 
 [Window][Inspector]
-Pos=958,93
+Pos=1008,457
 Size=373,638
+Collapsed=0
+
+[Window][Test window]
+Pos=1,1
+Size=343,960
 Collapsed=0
 
