--- a/imgui.ini
+++ b/imgui.ini
@@ -1,42 +1,43 @@
+[Window][Dockspace]
+Pos=0,0
+Size=1920,1108
+Collapsed=0
+
 [Window][Debug##Default]
-Pos=600,600
-Size=400,400
-Collapsed=1
-
-[Window][TestWindow]
 Pos=60,60
-Size=57,70
+Size=400,400
 Collapsed=0
-
-[Window][Dear ImGui Demo]
-Pos=806,38
-Size=1106,392
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Inspector]
-Pos=8,38
-Size=796,517
-Collapsed=0
-DockId=0x00000005,0
 
 [Window][Test window]
-Pos=8,557
-Size=796,515
+Pos=8,772
+Size=1904,328
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Dear ImGui Demo]
+Pos=1551,38
+Size=361,732
 Collapsed=0
 DockId=0x00000006,0
 
-[Window][Dockspace]
-Pos=0,0
-Size=1920,1080
+[Window][Game Viewport]
+Pos=487,38
+Size=1062,732
 Collapsed=0
+DockId=0x00000005,0
+
+[Window][Inspector]
+Pos=8,38
+Size=477,732
+Collapsed=0
+DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace     ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=X
-  DockNode    ID=0x00000003 Parent=0x33675C32 SizeRef=796,1034 Split=Y Selected=0xF02CD328
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=796,517 Selected=0xF02CD328
-    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=796,515 Selected=0x8081D1E6
-  DockNode    ID=0x00000004 Parent=0x33675C32 SizeRef=545,1034 Split=Y
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1904,392 Selected=0xE927CF2F
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1904,640 CentralNode=1 Selected=0x8081D1E6
+DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1062 Split=Y Selected=0xAE7BB42F
+  DockNode      ID=0x00000001 Parent=0x33675C32 SizeRef=1904,704 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=477,1034 Selected=0xF02CD328
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1425,1034 Split=X Selected=0xAE7BB42F
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=1062,517 CentralNode=1 Selected=0xAE7BB42F
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=361,517 Selected=0xE927CF2F
+  DockNode      ID=0x00000002 Parent=0x33675C32 SizeRef=1904,328 Selected=0x8081D1E6
 
