--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace]
 Pos=0,0
-Size=1920,1108
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,35 +9,37 @@ Size=400,400
 Collapsed=0
 
 [Window][Test window]
-Pos=8,772
-Size=1904,328
+Pos=8,38
+Size=1904,484
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
-Pos=1551,38
-Size=361,732
+Pos=544,524
+Size=1162,32
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Game Viewport]
-Pos=487,38
-Size=1062,732
+Pos=8,558
+Size=1904,514
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000008,0
 
 [Window][Inspector]
-Pos=8,38
-Size=477,732
+Pos=1708,524
+Size=204,32
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1062 Split=Y Selected=0xAE7BB42F
-  DockNode      ID=0x00000001 Parent=0x33675C32 SizeRef=1904,704 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=477,1034 Selected=0xF02CD328
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1425,1034 Split=X Selected=0xAE7BB42F
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=1062,517 CentralNode=1 Selected=0xAE7BB42F
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=361,517 Selected=0xE927CF2F
-  DockNode      ID=0x00000002 Parent=0x33675C32 SizeRef=1904,328 Selected=0x8081D1E6
+DockSpace         ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=Y Selected=0xAE7BB42F
+  DockNode        ID=0x00000007 Parent=0x33675C32 SizeRef=1904,518 Split=Y
+    DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=1904,484 Selected=0x8081D1E6
+    DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1904,32 Split=X
+      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1698,1034 Split=X
+        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=32,517 CentralNode=1 Selected=0xAE7BB42F
+        DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1162,517 Selected=0xE927CF2F
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=204,1034 Selected=0xF02CD328
+  DockNode        ID=0x00000008 Parent=0x33675C32 SizeRef=1904,514 Selected=0xAE7BB42F
 
