--- a/imgui.ini
+++ b/imgui.ini
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Test window]
 Pos=499,38
-Size=1413,311
+Size=1413,125
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
 Pos=8,38
-Size=489,319
+Size=489,410
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Window][Game Viewport]
-Pos=499,351
-Size=1413,721
+Pos=499,165
+Size=1413,907
 Collapsed=0
 DockId=0x00000002,0
 
@@ -32,12 +32,20 @@ Size=489,713
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][Properties]
+Pos=8,450
+Size=489,622
+Collapsed=0
+DockId=0x00000008,0
+
 [Docking][Data]
-DockSpace     ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=X Selected=0xAE7BB42F
-  DockNode    ID=0x00000005 Parent=0x33675C32 SizeRef=489,1314 Split=Y Selected=0xE927CF2F
-    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=563,406 Selected=0xE927CF2F
-    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=563,906 Selected=0xF02CD328
-  DockNode    ID=0x00000006 Parent=0x33675C32 SizeRef=1754,1314 Split=Y
-    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=1904,311 Selected=0x8081D1E6
-    DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=1904,1001 CentralNode=1 Selected=0xAE7BB42F
+DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=X Selected=0xAE7BB42F
+  DockNode      ID=0x00000005 Parent=0x33675C32 SizeRef=489,1314 Split=Y Selected=0xE927CF2F
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=563,406 Split=Y Selected=0xE927CF2F
+      DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=489,410 Selected=0xE927CF2F
+      DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=489,622 Selected=0xC89E3217
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=563,906 Selected=0xF02CD328
+  DockNode      ID=0x00000006 Parent=0x33675C32 SizeRef=1754,1314 Split=Y
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=1904,125 Selected=0x8081D1E6
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=1904,907 CentralNode=1 Selected=0xAE7BB42F
 
