--- a/imgui.ini
+++ b/imgui.ini
@@ -16,7 +16,7 @@ DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
 Pos=8,38
-Size=489,1034
+Size=489,410
 Collapsed=0
 DockId=0x00000007,0
 
@@ -37,6 +37,11 @@ Pos=8,450
 Size=489,622
 Collapsed=0
 DockId=0x00000008,0
+
+[Window][Level Editor Components]
+Pos=260,284
+Size=506,562
+Collapsed=0
 
 [Docking][Data]
 DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=X Selected=0xAE7BB42F
