--- a/imgui.ini
+++ b/imgui.ini
@@ -16,9 +16,9 @@ DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
 Pos=8,38
-Size=489,410
+Size=489,166
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000009,0
 
 [Window][Game Viewport]
 Pos=499,165
@@ -39,18 +39,21 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Level Editor Components]
-Pos=260,284
-Size=506,562
+Pos=8,206
+Size=489,242
 Collapsed=0
+DockId=0x0000000A,0
 
 [Docking][Data]
-DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=X Selected=0xAE7BB42F
-  DockNode      ID=0x00000005 Parent=0x33675C32 SizeRef=489,1314 Split=Y Selected=0xE927CF2F
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=563,406 Split=Y Selected=0xE927CF2F
-      DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=489,410 Selected=0xE927CF2F
-      DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=489,622 Selected=0xC89E3217
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=563,906 Selected=0xF02CD328
-  DockNode      ID=0x00000006 Parent=0x33675C32 SizeRef=1754,1314 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=1904,125 Selected=0x8081D1E6
-    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=1904,907 CentralNode=1 Selected=0xAE7BB42F
+DockSpace         ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=X Selected=0xAE7BB42F
+  DockNode        ID=0x00000005 Parent=0x33675C32 SizeRef=489,1314 Split=Y Selected=0xE927CF2F
+    DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=563,406 Split=Y Selected=0xE927CF2F
+      DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=489,410 Split=Y Selected=0xE927CF2F
+        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=489,421 Selected=0xE927CF2F
+        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=489,611 Selected=0xD44CD349
+      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=489,622 Selected=0xC89E3217
+    DockNode      ID=0x00000004 Parent=0x00000005 SizeRef=563,906 Selected=0xF02CD328
+  DockNode        ID=0x00000006 Parent=0x33675C32 SizeRef=1754,1314 Split=Y
+    DockNode      ID=0x00000001 Parent=0x00000006 SizeRef=1904,125 Selected=0x8081D1E6
+    DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=1904,907 CentralNode=1 Selected=0xAE7BB42F
 
