--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ group 'no.arnemunthekaas'
 version '1.0-SNAPSHOT'
 
 repositories {
+    flatDir {
+        dirs 'libs'
+    }
     mavenCentral()
 }
 
@@ -29,8 +32,13 @@ ext {
 }
 
 dependencies {
+    // BOX2D
+    implementation name: 'jbox2d-library'
+
+    // GSON
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    // LWJGL
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
     implementation "org.lwjgl:lwjgl"
@@ -49,6 +57,7 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
     implementation "org.joml:joml:${jomlVersion}"
 
+    //IMGUI
     implementation "io.github.spair:imgui-java-app:1.86.4"
     implementation "io.github.spair:imgui-java-binding:$imguiVersion"
     implementation "io.github.spair:imgui-java-lwjgl3:$imguiVersion"
