--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Test window]
-Pos=579,38
-Size=1333,119
+Pos=421,38
+Size=1491,199
 Collapsed=0
 DockId=0x00000001,0
 
@@ -21,8 +21,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Game Viewport]
-Pos=579,159
-Size=1333,913
+Pos=421,239
+Size=1491,833
 Collapsed=0
 DockId=0x00000002,0
 
@@ -33,27 +33,31 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Properties]
-Pos=8,549
-Size=569,523
+Pos=8,38
+Size=411,1034
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000A,2
 
 [Window][Level Editor Components]
 Pos=8,38
-Size=569,509
+Size=411,1034
 Collapsed=0
 DockId=0x0000000A,0
 
+[Window][Scene Hierarchy]
+Pos=8,38
+Size=411,1034
+Collapsed=0
+DockId=0x0000000A,1
+
 [Docking][Data]
-DockSpace         ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=X Selected=0xAE7BB42F
-  DockNode        ID=0x00000005 Parent=0x33675C32 SizeRef=569,1314 Split=Y Selected=0xE927CF2F
-    DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=563,406 Split=Y Selected=0xE927CF2F
-      DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=489,509 Split=Y Selected=0xE927CF2F
-        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=489,238 Selected=0xE927CF2F
-        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=489,423 Selected=0xD44CD349
-      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=489,523 Selected=0xC89E3217
-    DockNode      ID=0x00000004 Parent=0x00000005 SizeRef=563,906 Selected=0xF02CD328
-  DockNode        ID=0x00000006 Parent=0x33675C32 SizeRef=1333,1314 Split=Y
-    DockNode      ID=0x00000001 Parent=0x00000006 SizeRef=1904,119 Selected=0x8081D1E6
-    DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=1904,913 CentralNode=1 Selected=0xAE7BB42F
+DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=X Selected=0xAE7BB42F
+  DockNode      ID=0x00000005 Parent=0x33675C32 SizeRef=411,1314 Split=Y Selected=0xE927CF2F
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=563,406 Split=Y Selected=0xE927CF2F
+      DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=489,238 Selected=0xE927CF2F
+      DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=489,423 Selected=0xC89E3217
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=563,906 Selected=0xF02CD328
+  DockNode      ID=0x00000006 Parent=0x33675C32 SizeRef=1491,1314 Split=Y
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=1904,199 Selected=0x8081D1E6
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=1904,833 CentralNode=1 Selected=0xAE7BB42F
 
