--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation "org.joml:joml:${jomlVersion}"
 
     //IMGUI
-    implementation "io.github.spair:imgui-java-app:1.86.4"
+    implementation "io.github.spair:imgui-java-app:$imguiVersion"
     implementation "io.github.spair:imgui-java-binding:$imguiVersion"
     implementation "io.github.spair:imgui-java-lwjgl3:$imguiVersion"
     implementation "io.github.spair:imgui-java-natives-windows-ft:$imguiVersion" // change this to support other operating systems
