--- a/imgui.ini
+++ b/imgui.ini
@@ -9,55 +9,60 @@ Size=400,400
 Collapsed=0
 
 [Window][Test window]
-Pos=421,38
-Size=1491,199
+Pos=8,790
+Size=1453,282
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
 Pos=8,38
 Size=809,238
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000005,0
 
 [Window][Game Viewport]
-Pos=421,239
-Size=1491,833
+Pos=8,38
+Size=1453,750
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][Inspector]
 Pos=8,359
 Size=489,713
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,0
 
 [Window][Properties]
-Pos=8,38
-Size=411,1034
+Pos=1625,807
+Size=449,328
 Collapsed=0
-DockId=0x0000000A,2
+DockId=0x00000004,0
 
 [Window][Level Editor Components]
-Pos=8,38
-Size=411,1034
+Pos=1463,38
+Size=449,1034
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000003,0
 
 [Window][Scene Hierarchy]
-Pos=8,38
-Size=411,1034
+Pos=1463,38
+Size=449,1034
 Collapsed=0
-DockId=0x0000000A,1
+DockId=0x00000003,1
+
+[Window][Dockspace Demo]
+Pos=-138,-161
+Size=1920,1080
+Collapsed=0
 
 [Docking][Data]
 DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=X Selected=0xAE7BB42F
-  DockNode      ID=0x00000005 Parent=0x33675C32 SizeRef=411,1314 Split=Y Selected=0xE927CF2F
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=563,406 Split=Y Selected=0xE927CF2F
-      DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=489,238 Selected=0xE927CF2F
-      DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=489,423 Selected=0xC89E3217
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=563,906 Selected=0xF02CD328
-  DockNode      ID=0x00000006 Parent=0x33675C32 SizeRef=1491,1314 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=1904,199 Selected=0x8081D1E6
-    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=1904,833 CentralNode=1 Selected=0xAE7BB42F
+  DockNode      ID=0x00000005 Parent=0x33675C32 SizeRef=449,1314 Selected=0xE927CF2F
+  DockNode      ID=0x00000006 Parent=0x33675C32 SizeRef=0,0 Split=X Selected=0xAE7BB42F
+    DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=1241,851 Split=Y Selected=0xAE7BB42F
+      DockNode  ID=0x00000001 Parent=0x00000009 SizeRef=1241,567 CentralNode=1 Selected=0xAE7BB42F
+      DockNode  ID=0x00000002 Parent=0x00000009 SizeRef=1241,282 Selected=0x8081D1E6
+    DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=449,851 Split=Y Selected=0x9A68760C
+      DockNode  ID=0x00000003 Parent=0x0000000B SizeRef=449,767 Selected=0x9A68760C
+      DockNode  ID=0x00000004 Parent=0x0000000B SizeRef=449,328 Selected=0xC89E3217
 
