--- a/imgui.ini
+++ b/imgui.ini
@@ -33,20 +33,20 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=1625,807
-Size=449,328
+Pos=1463,763
+Size=449,309
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Level Editor Components]
 Pos=1463,38
-Size=449,1034
+Size=449,723
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Scene Hierarchy]
 Pos=1463,38
-Size=449,1034
+Size=449,723
 Collapsed=0
 DockId=0x00000003,1
 
@@ -62,7 +62,7 @@ DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=X 
     DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=1241,851 Split=Y Selected=0xAE7BB42F
       DockNode  ID=0x00000001 Parent=0x00000009 SizeRef=1241,567 CentralNode=1 Selected=0xAE7BB42F
       DockNode  ID=0x00000002 Parent=0x00000009 SizeRef=1241,282 Selected=0x8081D1E6
-    DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=449,851 Split=Y Selected=0x9A68760C
-      DockNode  ID=0x00000003 Parent=0x0000000B SizeRef=449,767 Selected=0x9A68760C
-      DockNode  ID=0x00000004 Parent=0x0000000B SizeRef=449,328 Selected=0xC89E3217
+    DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=449,851 Split=Y Selected=0xD44CD349
+      DockNode  ID=0x00000003 Parent=0x0000000B SizeRef=449,723 Selected=0x9A68760C
+      DockNode  ID=0x00000004 Parent=0x0000000B SizeRef=449,309 Selected=0xC89E3217
 
