--- a/imgui.ini
+++ b/imgui.ini
@@ -22,9 +22,9 @@ DockId=0x00000005,0
 
 [Window][Game Viewport]
 Pos=8,38
-Size=1453,750
+Size=1453,762
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000007,0
 
 [Window][Inspector]
 Pos=8,359
@@ -40,13 +40,13 @@ DockId=0x00000004,0
 
 [Window][Level Editor Components]
 Pos=1463,38
-Size=449,723
+Size=449,1034
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Scene Hierarchy]
 Pos=1463,38
-Size=449,723
+Size=449,1034
 Collapsed=0
 DockId=0x00000003,1
 
@@ -55,14 +55,22 @@ Pos=-138,-161
 Size=1920,1080
 Collapsed=0
 
+[Window][Objects]
+Pos=8,802
+Size=1453,270
+Collapsed=0
+DockId=0x00000008,0
+
 [Docking][Data]
-DockSpace       ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=X Selected=0xAE7BB42F
-  DockNode      ID=0x00000005 Parent=0x33675C32 SizeRef=449,1314 Selected=0xE927CF2F
-  DockNode      ID=0x00000006 Parent=0x33675C32 SizeRef=0,0 Split=X Selected=0xAE7BB42F
-    DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=1241,851 Split=Y Selected=0xAE7BB42F
-      DockNode  ID=0x00000001 Parent=0x00000009 SizeRef=1241,567 CentralNode=1 Selected=0xAE7BB42F
-      DockNode  ID=0x00000002 Parent=0x00000009 SizeRef=1241,282 Selected=0x8081D1E6
-    DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=449,851 Split=Y Selected=0xD44CD349
-      DockNode  ID=0x00000003 Parent=0x0000000B SizeRef=449,723 Selected=0x9A68760C
-      DockNode  ID=0x00000004 Parent=0x0000000B SizeRef=449,309 Selected=0xC89E3217
+DockSpace         ID=0x33675C32 Window=0x5B816B74 Pos=8,38 Size=1904,1034 Split=X Selected=0xAE7BB42F
+  DockNode        ID=0x00000005 Parent=0x33675C32 SizeRef=449,1314 Selected=0xE927CF2F
+  DockNode        ID=0x00000006 Parent=0x33675C32 SizeRef=0,0 Split=X Selected=0xAE7BB42F
+    DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=1241,851 Split=Y Selected=0xAE7BB42F
+      DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=1241,567 Split=Y Selected=0xAE7BB42F
+        DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=1453,762 CentralNode=1 Selected=0xAE7BB42F
+        DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=1453,270 Selected=0x7DA7F56F
+      DockNode    ID=0x00000002 Parent=0x00000009 SizeRef=1241,282 Selected=0x8081D1E6
+    DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=449,851 Split=Y Selected=0xD44CD349
+      DockNode    ID=0x00000003 Parent=0x0000000B SizeRef=449,723 Selected=0x9A68760C
+      DockNode    ID=0x00000004 Parent=0x0000000B SizeRef=449,309 Selected=0xC89E3217
 
